--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -99,3 +99,80 @@ img {
         opacity: 1;
     }
 }
+
+/* Estilos básicos para os skeletons */
+.skeleton {
+    background-color: #e0e0e0;
+    border-radius: 4px;
+    height: 1rem;
+    width: 100%;
+    animation: skeleton-loading 1.5s infinite ease-in-out;
+}
+
+.skeleton-name {
+    animation: skeleton-loading 1.5s infinite ease-in-out;
+    width: 300px;
+    height: 30px;
+}
+
+.skeleton-link {
+    animation: skeleton-loading 1.5s infinite ease-in-out;
+    width: 300px;
+    height: 40px;
+}
+
+.skeleton-img {
+    background-color: #e0e0e0; /* Cor de fundo */
+}
+
+.skeleton-item {
+    display: flex;
+    gap: 8px;   
+}
+
+#list-bio {
+    padding: 4px;
+}
+
+#list-bio > li.skeleton-item:first-child > h2 {
+    height: 100px;
+    width: 100%;
+}
+#list-bio > li.skeleton-item:last-child > h2 {
+    height: 40px;
+    width: 100%;
+}
+
+.skeleton-item > h2.skeleton {
+    width: 100px;
+    height: 30px;
+}
+.skeleton-item > p.skeleton {
+    width: 200px;
+    height: 30px;
+}
+
+.skeleton-link {
+    width: 150px;
+    height: 1rem;
+}
+
+@keyframes skeleton-loading {
+    0% {
+        background-color: #e0e0e0;
+    }
+    50% {
+        background-color: #f0f0f0;
+    }
+    100% {
+        background-color: #e0e0e0;
+    }
+}
+
+/* Adicionando estilos para o carregamento de imagem */
+.skeleton-img img {
+    width: 100%;
+    height: 100%;
+    background-color: #f0f0f0;
+    animation: skeleton-loading 1.5s infinite ease-in-out;
+}
