--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -104,7 +104,7 @@ img {
 .skeleton {
     background-color: #e0e0e0;
     border-radius: 4px;
-    height: 1rem;
+    height: .8rem;
     width: 100%;
     animation: skeleton-loading 1.5s infinite ease-in-out;
 }
@@ -112,7 +112,7 @@ img {
 .skeleton-name {
     animation: skeleton-loading 1.5s infinite ease-in-out;
     width: 250px;
-    height: 30px;
+    height: 20px;
 }
 
 .skeleton-link {
@@ -132,16 +132,17 @@ img {
     gap: 8px;   
 }
 
-#list-bio > li.skeleton-item:first-child > h2 {
-    height: 100px;
+.skeleton-text {
+    height: 80px;
     width: 100%;
+    animation: skeleton-loading 1.5s infinite ease-in-out;
 }
 #list-bio > li.skeleton-item:last-child > h2 {
     height: 40px;
     width: 100%;
 }
 
-.skeleton-item > h2.skeleton {
+.skeleton-item > h3.skeleton {
     width: 100px;
     height: 30px;
 }
@@ -168,9 +169,9 @@ img {
 }
 
 /* Adicionando estilos para o carregamento de imagem */
-.skeleton-img img {
-    width: 100%;
-    height: 100%;
+.skeleton-img {
+    height: 60px;
+    width: 60px;
     background-color: #f0f0f0;
     animation: skeleton-loading 1.5s infinite ease-in-out;
 }
